docs: Finalizando documentação de User com a rota de carrinho
